Correct whitespaces, line breaks

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -211,7 +211,7 @@ Show the link that contains should open and close the topnav (.icon) */
 }
 
 .nav-connected {
-    max-width: 80%;
+    max-width: 90%;
     margin: auto;
 }
 
